--- a/fuchion/package.json
+++ b/fuchion/package.json
@@ -20,14 +20,15 @@
     "@angular/platform-browser": "^6.1.0",
     "@angular/platform-browser-dynamic": "^6.1.0",
     "@angular/router": "^6.1.0",
-    "core-js": "^2.5.4",
-    "rxjs": "~6.2.0",
-    "zone.js": "~0.8.26",
+    "aos": "^2.3.4",
     "bootstrap-social": "^5.1.1",
+    "core-js": "^2.5.4",
     "font-awesome": "^4.7.0",
     "jquery": "^3.5.1",
     "popper": "^1.0.1",
-    "popper.js": "^1.12.9"
+    "popper.js": "^1.12.9",
+    "rxjs": "~6.2.0",
+    "zone.js": "~0.8.26"
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "~0.8.0",
