--- a/package.json
+++ b/package.json
@@ -56,6 +56,7 @@
     "usemin-cli": "^0.6.0"
   },
   "dependencies": {
+    "aos": "^2.3.4",
     "bootstrap": "^4.5.0",
     "bootstrap-social": "^5.1.1",
     "font-awesome": "^4.7.0",
